[package]
name = "bit-torrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"]}
indexmap = "2.1.0"
reqwest = "0.11.23"
serde_json = "1.0.109"
sha1 = "0.10.6"
