[package]
name = "bit-torrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"]}
reqwest = "0.11.23"
serde_json = "1.0.109"
sha1_smol = "1.0.0"

[dependencies.bencode]
path = "crates/bencode"
