[package]
name = "bit-torrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
byteorder = "1.5.0"
clap = { version = "4.4.12", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde_json = "1.0.109"
sha1_smol = "1.0.0"
thiserror = "1.0.56"

[dependencies.bencode]
path = "crates/bencode"
